{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 11,
  "lineage": "081a5eb8-d77a-c3fd-a503-8fdb5a2cb046",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T21:41:20.310-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/robot-platform-gcp/global/firewalls/squid-vpc-allow-iap-ssh",
            "log_config": [],
            "name": "squid-vpc-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
            "priority": 1000,
            "project": "robot-platform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/firewalls/squid-vpc-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-05-22T21:41:20.075-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/robot-platform-gcp/global/firewalls/squid-prod-allow-internal",
            "log_config": [],
            "name": "squid-prod-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
            "priority": 1000,
            "project": "robot-platform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/firewalls/squid-prod-allow-internal",
            "source_ranges": [
              "10.0.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T21:41:20.043-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/robot-platform-gcp/global/firewalls/squid-prod-allow-ssh",
            "log_config": [],
            "name": "squid-prod-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
            "priority": 1000,
            "project": "robot-platform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/firewalls/squid-prod-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "squid_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/zones/us-central1-a/disks/squid-proxy-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "cluster": "squid-prod",
              "environment": "prod",
              "managed_by": "terraform"
            },
            "enable_display": false,
            "id": "projects/robot-platform-gcp/zones/us-central1-a/instances/squid-proxy-1",
            "instance_id": "1392922965879590634",
            "label_fingerprint": "qdqARtXxrd8=",
            "labels": {
              "cluster": "squid-prod",
              "environment": "prod"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "TBq7IE4oRPU=",
            "name": "squid-proxy-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/regions/us-central1/subnetworks/squid-subnet",
                "subnetwork_project": "robot-platform-gcp"
              }
            ],
            "project": "robot-platform-gcp",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/zones/us-central1-a/instances/squid-proxy-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "cluster": "squid-prod",
              "environment": "prod",
              "managed_by": "terraform"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/zones/us-central1-a/disks/squid-proxy-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "cluster": "squid-prod",
              "environment": "prod",
              "managed_by": "terraform"
            },
            "enable_display": false,
            "id": "projects/robot-platform-gcp/zones/us-central1-a/instances/squid-proxy-2",
            "instance_id": "5710396753799057130",
            "label_fingerprint": "qdqARtXxrd8=",
            "labels": {
              "cluster": "squid-prod",
              "environment": "prod"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "TBq7IE4oRPU=",
            "name": "squid-proxy-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/regions/us-central1/subnetworks/squid-subnet",
                "subnetwork_project": "robot-platform-gcp"
              }
            ],
            "project": "robot-platform-gcp",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/zones/us-central1-a/instances/squid-proxy-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "cluster": "squid-prod",
              "environment": "prod",
              "managed_by": "terraform"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/robot-platform-gcp/global/networks/squid-vpc",
            "mtu": 0,
            "name": "squid-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2818930053218079029",
            "project": "robot-platform-gcp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-22T21:41:20.130-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/robot-platform-gcp/regions/us-central1/routers/squid-vpc-router",
            "name": "squid-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
            "project": "robot-platform-gcp",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/regions/us-central1/routers/squid-vpc-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "robot-platform-gcp/us-central1/squid-vpc-router/squid-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "squid-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "robot-platform-gcp",
            "region": "us-central1",
            "router": "squid-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-22T21:41:20.129-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/robot-platform-gcp/regions/us-central1/subnetworks/squid-subnet",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "squid-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/global/networks/squid-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "robot-platform-gcp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.0.64.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/robot-platform-gcp/regions/us-central1/subnetworks/squid-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}